helm/tomatocharts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomato-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: tomato.vprofile.tomatokillerucd.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: tback
            port:
              number: 31000
      - pathType: Prefix
        path: "/gpt"
        backend:
          service:
            name: tchat
            port:
              number: 31002
      - pathType: Prefix
        path: "/FaceRec"
        backend:
          service:
            name: tface
            port:
              number: 31004
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tfront
            port:
              number: 31001
